--- a/eda.Rmd
+++ b/eda.Rmd
@@ -270,6 +270,7 @@ To do before meeting:
 DETERMINING THE NUMBER OF CLUSTERS:
 
 ```{r}
+# explain how number of clusters is very much impacted by choice of heuristics
 fviz_nbclust(by_country[,2:ncol(by_country)], kmeans, nstart = 25,  method = "gap_stat", 
              nboot =50)+ labs(subtitle = "Gap statistic method for K Means")
 fviz_nbclust(by_country[,2:ncol(by_country)], kmeans, nstart = 25,  method = "silhouette", 
@@ -430,6 +431,9 @@ dev.off()
 
 ```{r}
 # anova stuff
+# histograms or boxplots -- distribution of these variables across these clusters change
+# for ones that are significant -- look for outliers!
+
 k_gdp <- aov(GDP ~ cluster3, data = master_df_k)
 k_pop <- aov(Pop ~ cluster3, data = master_df_k) 
 k_exp <- aov(Expectancy ~ cluster3, data = master_df_k) 
@@ -461,13 +465,6 @@ https://gist.github.com/tadast/8827699
 https://worldpopulationreview.com/country-rankings/literacy-rate-by-country
 https://www.datanovia.com/en/lessons/determining-the-optimal-number-of-clusters-3-must-know-methods/
 
-questions:
-
-- whether PCA from 5 to 2 variables is interpretable/useful in the first place
-- thinking of using Rand index to compare clustering: https://en.wikipedia.org/wiki/Rand_index (continent, development level)
-- do I have enough? should I be 
-- motivating the problem -- making sure I'm not just saying that it's interesting ``to me"
-
 ```{r}
 # need to merge continent and development level into the data
 continents <- read.csv('data/demographic/continent.csv')
@@ -487,8 +484,19 @@ rand.index(as.numeric(levels(master_df_k_continent$cluster3))[master_df_k_contin
            master_df_k_continent$continent)
 rand.index(as.numeric(levels(master_df_h_continent$cluster3))[master_df_h_continent$cluster3], 
            master_df_k_continent$continent)
+rand.index(as.numeric(levels(master_df_h_continent$cluster3))[master_df_h_continent$cluster3], 
+           as.numeric(levels(master_df_k_continent$cluster3))[master_df_k_continent$cluster3])
 # trying to explain these results? need similar data for developed vs undeveloped
+# be prepared to justify why!!
 ```
 
+questions:
+
+- whether PCA from 5 to 2 variables is interpretable/useful in the first place -- can just choose a few sets of two variables that are interesting
+- thinking of using Rand index to compare clustering: https://en.wikipedia.org/wiki/Rand_index (continent, development level)
+- do I have enough? should I be 
+- motivating the problem -- making sure I'm not just saying that it's interesting ``to me"
+- don't have all the results yet, and even if I do, am afraid they are not meaningful enough
+- end with what surprised
 
 
